Update to julielab-parent 2.4.0 which uses Java11 and Neo4j 3.5.17. Minor related fix, tests are running.